--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "script.js",
   "type": "module",
   "scripts": {
+    "build": "run build",
     "start": "nodemon serve.js"
   },
   "keywords": [],
