--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "script.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon serve.js"
+    "start": "node serve.js"
   },
   "keywords": [],
   "author": "",
